--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,23 +2,27 @@
 
 .ui-menu-color-home {
     background-color: blueviolet;
+    margin: 10px;
 }
 
 .ui-menu-color-about {
     background-color: rgb(18, 48, 218);
+    margin: 10px;
 }
 
 .ui-menu-color-recipe {
     background-color: rgb(2, 113, 128);
+    margin: 10px;
 }
 
 .ui-menu-color-shop-advice {
     background-color: rgb(13, 214, 90);
+    margin: 10px;
 }
 
 .ui-page-title {
     background-color: rgb(255, 0, 0);
-    font-weight: 500;
+    text-align: center;
 }
 
 .ui-menu-color-home {
@@ -39,7 +43,11 @@
 
 /*-- Formatting --*/
 
+.navbar {
+    display: flex;
+  justify-content: space-between;
+}
+
 .navbar a {
-    text-align: center;
     padding: 10px 10px;
 }
