--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+/*-- logo --*/
+.fusion-logo {
+    max-width: 100px;
+    max-height: 100%;
+    border-radius: 50%;
+    display: inline-block;
+    }
+
+
 /*-- Colors --*/
 
 .ui-menu-color-home {
@@ -46,6 +55,9 @@
 .navbar {
     display: flex;
   justify-content: space-between;
+  width: 100%;
+  height: 100px;
+  background-color: darkslategrey;
 }
 
 .navbar a {
