--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*-- logo --*/
 .fusion-logo {
-    max-width: 100px;
-    max-height: 100%;
+    max-width: 80px;
+    max-height: 80px;
     border-radius: 50%;
     display: inline-block;
     }
