--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,9 +57,11 @@
   justify-content: space-between;
   width: 100%;
   height: 100px;
-  background-color: darkslategrey;
+  background-color: #603540;
+  color: #688274;
 }
 
 .navbar a {
     padding: 10px 10px;
+    color: #688274;
 }
