--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Almendra+SC&display=swap');
+
 /*-- logo --*/
 .fusion-logo {
     max-width: 80px;
     max-height: 80px;
     border-radius: 50%;
-    display: inline-block;
-    }
+    /* display: inline-block; */
+}
 
 
 /*-- Colors --*/
@@ -50,18 +52,38 @@
     color: #fff;
 }
 
-/*-- Formatting --*/
+/*-- Navbar --*/
 
 .navbar {
     display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 100px;
-  background-color: #603540;
-  color: #688274;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    background-color: #603540;
+    color: #EBE4A5;
+    font-family: 'Almendra SC', sans-serif;
 }
 
 .navbar a {
-    padding: 10px 10px;
+    padding: 10px 100px 10px 10px;
+    color: #d4d4d0;
+    font-size: 32px;
+}
+
+.navbar-brand {
+    font-family: 'Almendra SC', sans-serif;
+}
+
+#logo-title {
+    margin-left: 15px;
+}
+
+/*-- Footer--*/
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    background-color: #603540;
     color: #688274;
+    font-family: 'Almendra SC', sans-serif;
 }
