Added images and text to the about page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,22 @@
 .navbar a {
     padding: 10px 10px;
 }
+
+/*-- About page --*/
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+/*-- Images --*/
+
+img {
+    width: 500px;
+    height: 500px;
+}
+
+.image-container {
+    display: flex;
+    
+}
