--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,49 @@
 .navbar a {
     padding: 10px 10px;
 }
+
+
+/*-----For Recipes-----*/
+
+#chicken-noodle {
+    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-position: center 20%;
+    padding: 0;
+    margin: 0;
+    border: 1px solid black;
+    left: 0;
+    
+}
+
+/*--undoing bootstrap bullshit--*/
+
+.row {
+    border: 1px solid black;
+    margin: 0;
+}
+
+.container {
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    right: 0;
+}
+
+.nopadding {
+    padding: 0;
+    margin: 0;
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 100vw;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 100vw;
+    }
+}
