--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@
 }
 
 .navbar a {
-<<<<<<< HEAD
     padding: 10px 100px 10px 10px;
     color: #d4d4d0;
     font-size: 32px;
@@ -106,7 +105,58 @@ img {
 .image-container {
     display: flex;
     
-=======
+}
+/*-- Colors --*/
+
+.ui-menu-color-home {
+    background-color: blueviolet;
+    margin: 10px;
+}
+
+.ui-menu-color-about {
+    background-color: rgb(18, 48, 218);
+    margin: 10px;
+}
+
+.ui-menu-color-recipe {
+    background-color: rgb(2, 113, 128);
+    margin: 10px;
+}
+
+.ui-menu-color-shop-advice {
+    background-color: rgb(13, 214, 90);
+    margin: 10px;
+}
+
+.ui-page-title {
+    background-color: rgb(255, 0, 0);
+    text-align: center;
+}
+
+.ui-menu-color-home {
+    color: #fff;
+}
+
+.ui-menu-color-about {
+    color: #fff;
+}
+
+.ui-menu-color-recipe {
+    color: #fff;
+}
+
+.ui-menu-color-shop-advice {
+    color: #fff;
+}
+
+/*-- Formatting --*/
+
+.navbar {
+    display: flex;
+  justify-content: space-between;
+}
+
+.navbar a {
     padding: 10px 10px;
 }
 
@@ -172,5 +222,4 @@ img {
     justify-self: flex-end;
     height: 10vh;
     border: 1px solid red;
->>>>>>> recipe-pages-ching
 }
