--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,18 +100,29 @@
 
 .flex-for-nut-bar {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
     height: 50vh;
 }
 
 .recipe-title {
-    display: flex;
-    align-self: center;
+    padding-top: 12%;
+}
+
+.container-for-info-bar {
+    height: 20vh;
+    width: 100vw; 
+    border: 1px solid red;
 }
 
 .container-for-nut-bar {
-    display: flex;
-    align-self: baseline;
-    height: 10vh;
-    border: 1px solid red;
+    height: 20vh;
+    width: 40vw;
+    border: none;
+    vertical-align: middle;
+}
+
+.nut-container {
+    padding: 3px;
+    border: 1px white; 
 }
