--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,6 @@
 /*--undoing bootstrap bullshit--*/
 
 .row {
-    border: 1px solid black;
     margin: 0;
 }
 
@@ -103,26 +102,43 @@
     flex-direction: column;
     justify-content: space-between;
     height: 50vh;
+    background-color: rgba(96, 53, 64, 0.3);
 }
 
 .recipe-title {
-    padding-top: 12%;
+    padding-top: 8%;
+    font-size: 300%;
 }
 
 .container-for-info-bar {
     height: 20vh;
-    width: 100vw; 
-    border: 1px solid red;
+    width: 66vw; 
 }
 
-.container-for-nut-bar {
-    height: 20vh;
-    width: 40vw;
-    border: none;
-    vertical-align: middle;
+.box-nut {
+    display: inline-block;
+    height: fit-content;
+    width: 7vw;
+    background-color: rgba(104, 130, 116, 0.3);     /*a colour is here*/
+    text-align: center;
+    position: absolute;
+    top: 8vh;
 }
 
 .nut-container {
-    padding: 3px;
-    border: 1px white; 
+    display: inline-block;
+    vertical-align: bottom;
+}
+
+ul > li {
+    list-style-type: none;
+}
+
+.recipe-title-h2 {
+    margin-bottom: 3vh;
+    text-align: center;
+}
+
+ol > li {
+    margin: 4vh;
 }
