--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,9 @@
     .container {
         max-width: 100vw;
     }
+    .h-md-100 {
+        height: 100% !important;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -112,7 +115,7 @@
 
 .container-for-info-bar {
     height: 20vh;
-    width: 66vw; 
+    width: 66vw;
 }
 
 .box-nut {
@@ -148,3 +151,4 @@ ol > li {
         max-width: 100%;
     }
 }
+
