--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,11 @@ img {
     border-color: #d4d4d0;
     border-radius: 50%;
 }
+
+.hero-image {
+    background-size: cover;
+    background-position: center;
+}
 /*-- Colors --*/
 
 .ui-menu-color-home {
