--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@
     
 }
 
-/*--undoing bootstrap bullshit--*/
+/*--undoing bootstrap--*/
 
 .row {
     margin: 0;
@@ -109,28 +109,39 @@
 }
 
 .recipe-title {
-    padding-top: 8%;
+    padding-top: 20%;
     font-size: 300%;
 }
 
 .container-for-info-bar {
     height: 20vh;
-    width: 66vw;
+    width: 100vw;
+    
+}
+
+@media (min-width: 768px) {
+    .container-for-info-bar {
+        height: 20vh;
+        width: 66vw;
+        
+    }
 }
 
 .box-nut {
     display: inline-block;
     height: fit-content;
-    width: 7vw;
+    width: 65px;
+    min-width: fit-content;
     background-color: rgba(104, 130, 116, 0.3);     /*a colour is here*/
     text-align: center;
     position: absolute;
-    top: 8vh;
+    top: 2vw;
 }
 
 .nut-container {
     display: inline-block;
     vertical-align: bottom;
+    
 }
 
 ul > li {
@@ -151,4 +162,32 @@ ol > li {
         max-width: 100%;
     }
 }
+
+.displaynone {
+    display: none;
+}
+
+@media (min-width: 768px){
+    .displaynone {
+        display: inline-block;
+        min-width: fit-content;
+    }
+}
+@media (min-width: 768px){
+    .sm-nut-container {
+        display: none;
+    }
+}
+
+.add-padding-top {
+    padding-top: 100px;
+}
+
+@media (min-width: 768px){
+    .add-padding-top {
+        padding-top: 0;
+    }
+    
+}
+
 
