--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,10 +112,14 @@ img {
     border-color: #d4d4d0;
     border-radius: 50%;
 }
-
+/*-- Colors --*/
 .hero-image {
     background-size: cover;
     background-position: center;
+}
+#hero {
+    height: 600px;
+    width: 100%;
 }
 /*-- Colors --*/
 
