--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,14 @@
     padding: 10px 10px;
 }
 
+/*----Menu page---*/
+
+.recipe-titles {
+    height: 12vh;
+    padding: 0;
+    margin-top: 4vh;
+}
+
 
 /*-----For Recipes-----*/
 
