--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Almendra+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+
 
 /* fonts */
 h1, h2, h3, h4, p {
-    font-family: 'Almendra SC', sans-serif;
+    font-family: "Marcellus", serif;
 }
 
-
+h1 {
+    font-family: 'Almendra SC', sans-serif;
+}
 
 .inline-block {
     display: inline-block;
@@ -99,13 +103,12 @@ h1, h2, h3, h4, p {
    
 }
 
-.fusionh1 {
-    display: flex;
-    text-align: center;
-}
-
 .about-h1 {
     padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.about-h4 {
     padding-bottom: 20px;
 }
 
@@ -114,7 +117,16 @@ h1, h2, h3, h4, p {
 .about-image {
     max-width: 400px;
     max-height: 400px;
+    border-radius: 15%;
     padding: 10px 10px;
+}
+
+.about-box {
+    padding-bottom: 20px;
+}
+
+.about-bottom {
+    margin-bottom: 72px;
 }
 
 .image-container {
