--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@ h1 {
 
 /*-- Colors --*/
 
+body {
+    background-color: #e8e1d9;
+}
 
 /*-- logo --*/
 .fusion-logo {
@@ -99,9 +102,6 @@ h1 {
     justify-content: space-between;
 }
 
-.persons {
-   
-}
 
 .about-h1 {
     padding-top: 20px;
@@ -109,6 +109,15 @@ h1 {
 }
 
 .about-h4 {
+    padding-bottom: 20px;
+}
+
+.about-box {
+    padding-bottom: 20px;
+    margin: 0 20px ;
+}
+
+.about-info {
     padding-bottom: 20px;
 }
 
@@ -121,9 +130,6 @@ h1 {
     padding: 10px 10px;
 }
 
-.about-box {
-    padding-bottom: 20px;
-}
 
 .about-bottom {
     margin-bottom: 72px;
@@ -133,6 +139,8 @@ h1 {
     display: flex;
 
 }
+
+
 
 .btn {
     right: 5px;
