--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4, p {
     font-family: "Marcellus", serif;
 }
 
-h1 {
+h1, .card {
     font-family: 'Almendra SC', sans-serif;
 }
 
@@ -46,6 +46,7 @@ body {
     padding-right: 0;
 }
 
+
 .navbar a {
     padding: 10px 0px 10px 10px;
     color: #d4d4d0;
@@ -71,6 +72,8 @@ body {
     right: 0;
     padding-right: 0px;
     margin-right: 55px;
+    flex-wrap: nowrap;
+    flex-shrink: inherit;
 
 }
 
@@ -141,7 +144,7 @@ body {
 }
 
 
-
+/*-------------------------------------- menu dropdown button */
 .btn {
     right: 5px;
 }
@@ -150,7 +153,34 @@ body {
     width: 15px;
 }
 
-.btn-secondary {
+.card {
+    text-align: center;
+    background-color: #603540da;
+    border-radius: 0;
+}
+
+.card a {
+    color: #d4d4d0;
+    font-size: 2rem;
+}
+
+.btn {
+    border-color: #000000;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    background-color: #d4d4d0;
+    color: #603540;
+    border-color: #d4d4d0;
+}
+
+.btn-primary:hover {
+    background-color: #d4d4d0;
+    color: #603540;
+    border-color: #d4d4d0;
+}
+
+.btn-primary {
     background-color: #d4d4d0;
     color: #603540;
     border-color: #d4d4d0;
@@ -230,6 +260,10 @@ body {
 }
 
 /*--undoing bootstrap--*/
+
+.box-sizing {
+    box-sizing: content-box;
+}
 
 .row {
     margin: 0;
