--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,37 +186,146 @@ body {
     border-color: #d4d4d0;
     border-radius: 50%;
 }
-/*-- Hero image --*/
-.hero-image {
-    background-image: url('assets/images/hero-image-chinese-food.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/*-- Homepage Phone--*/
 
+#hero-image {
+    background-image: url('../images/hero-image-chinese-food.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100vw;
+    height: 100vw;
 }
-
-/*-- Front page --*/
 
 .container-our-mission {
-    width: 300px;
-    margin-left: 10px;
-    margin-top: 20px;
-    background-color: #363f01;
-    color: #fff;
-    font-family: 'Almendra SC', sans-serif;
+    width: 100vw;
+    height: 30%;
+    background-color: rgba(54, 63, 1, 0.3);
+    color: black;
+    margin-bottom: 5px;
+}
+
+.featured-image-1 {
+    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+    position: relative;
+    width: 100vw;
+    height: 100vw;
+    background-position: center center;
+}
+
+.featured-image-2 {
+    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+    position: relative;
+    width: 100vw;
+    height: 100vw;
+    background-position: center center;
+}
+
+.featured-image-3 {
+    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+    position: relative;
+    width: 100vw;
+    height: 100vw;
+    background-position: center center;
+}
+
+.feature-description {
+    position: absolute;
+    width: 50vw;
+    top: 20%;
+    left: 10%;
+    background-color: rgba(0, 0, 0, 0.65);
+    color: white;
+}
+
+.featured-box-2, .featured-box-3 {
+    display: none;
+}
+
+.featured-main-title {
+    display: none;
+}
+
+/* ---Homepage Tablet---- */
+
+@media (min-width: 768px) {
+    #hero-image {
+        background-image: url('../images/hero-image-chinese-food.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100vw;
+        height: 800px;
+    }
+
+    .container-our-mission {
+        position: relative;
+        bottom: 300px;
+        width: 70vw;
+        height: 30%;
+        background-color: rgba(255, 255, 255, 0.6);
+        color: black;
+        margin-bottom: 5px;
+    }
+
+    .featured-image-1 {
+        background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+        position: relative;
+        width: 246px;
+        height: 246px;
+    }
+
+    .featured-image-2 {
+        background-image: url('../images/Slow-cooker\ braised\ Chinese\ pork.jpg');
+        position: relative;
+        width: 246px;
+        height: 246px;
+    }
+
+    .featured-box-2, .featured-box-1 {
+        display: inline-block;
+        width: 30vw;
+        height: 30vw;
+    }
+
+    .flex-container-home-1 {
+        display: flex;
+        justify-content: space-around;
+        position: absolute;
+        width: 100%;
+        bottom: 15px;
+        margin-top: 5px;
+    }
+
+    .featured-box-3 {
+        display: none;
+    }
+
+    .feature-description {
+        width: 110px;
+        height: 120px;
+    }
+
+    .featured-main-title {
+        display: block;
+        position: relative;
+        left: 36%;
+        bottom: 70px; 
+    }
+}
+
+/* --homepage-desktop-- */
+
+@media (min-width: 992px) {
+    #hero-image {
+        background-image: url('../images/hero-image-chinese-food.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100vw;
+        height: 800px;
 }
 
 
 
 
-
-#hero-image-main {
-    padding: 20px;
-}
 
 /*-- Colors --*/
 
