--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,13 +303,6 @@ body {
         width: 110px;
         height: 120px;
     }
-
-    .featured-main-title {
-        display: block;
-        position: relative;
-        left: 36%;
-        bottom: 70px; 
-    }
 }
 
 /* --homepage-desktop-- */
@@ -321,6 +314,22 @@ body {
         background-position: center center;
         width: 100vw;
         height: 800px;
+}
+
+.flex-container-home-2 {
+    display: inline-flex;
+    justify-content: space-around;
+    position: absolute;
+    width: 100%;
+    top: 940px;
+    margin-top: 5px;
+}
+
+.flex-item {
+    
+    width: 20vw;
+    height: 20vw;
+}
 }
 
 
