--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ body {
 /* Recipe images */
 
 #chicken-noodle {
-    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
+    background-image: url('../images/ChickenNoodleStirFryRecipe.jpg');
     height: 50vh;
     background-repeat: no-repeat;
     background-position: center 20%;
@@ -264,7 +264,7 @@ body {
 }
 
 #pork-roast {
-    background-image: url(../images/Slow-cooker\ braised\ Chinese\ pork.jpg);
+    background-image: url('../images/Slow-cookerbraisedChinesepork.jpg');
     height: 50vh;
     background-repeat: no-repeat;
     background-position: 70% 40%;
@@ -274,7 +274,7 @@ body {
 }
 
 #ginger-tofu {
-    background-image: url(../images/Sticky\ soy\ and\ ginger\ tofu\ with\ charred\ broccoli\ recipe.jpg);
+    background-image: url('../images/Stickysoyandgingertofuwithcharredbroccolirecipe.jpg');
     height: 50vh;
     background-repeat: no-repeat;
     background-position: center 40%;
@@ -347,7 +347,7 @@ body {
     height: fit-content;
     width: 65px;
     min-width: fit-content;
-    background-color: rgba(104, 130, 116, 0.3);     /*a colour is here*/
+    background-color: rgba(104, 130, 116, 0.3);
     text-align: center;
     position: absolute;
     top: 2vw;
