--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,154 +190,31 @@ body {
 
 #hero-image {
     background-image: url('../images/hero-image-chinese-food.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
+    background-size: cover;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
 }
 
+@media (min-width: 576px){
+    #hero-image {
+        background-image: url('../images/hero-image-chinese-food.jpg');
+        background-size: 210%;
+        background-repeat: no-repeat;
+        background-position: center center;
+        margin-top: -2vw; 
+} 
+}
 .container-our-mission {
-    width: 100vw;
-    height: 30%;
-    background-color: rgba(54, 63, 1, 0.3);
-    color: black;
-    margin-bottom: 5px;
-}
-
-.featured-image-1 {
-    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
-    position: relative;
-    width: 100vw;
-    height: 100vw;
-    background-position: center center;
-}
-
-.featured-image-2 {
-    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
-    position: relative;
-    width: 100vw;
-    height: 100vw;
-    background-position: center center;
-}
-
-.featured-image-3 {
-    background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
-    position: relative;
-    width: 100vw;
-    height: 100vw;
-    background-position: center center;
-}
-
-.feature-description {
     position: absolute;
-    width: 50vw;
-    top: 20%;
-    left: 10%;
-    background-color: rgba(0, 0, 0, 0.65);
-    color: white;
+    top: 40%;
+    width: 66%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color:white;
+    margin-left: 10px;
 }
-
-.featured-box-2, .featured-box-3 {
-    display: none;
-}
-
-.featured-main-title {
-    display: none;
-}
-
-/* ---Homepage Tablet---- */
-
-@media (min-width: 768px) {
-    #hero-image {
-        background-image: url('../images/hero-image-chinese-food.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        width: 100vw;
-        height: 800px;
-    }
-
-    .container-our-mission {
-        position: relative;
-        bottom: 300px;
-        width: 70vw;
-        height: 30%;
-        background-color: rgba(255, 255, 255, 0.6);
-        color: black;
-        margin-bottom: 5px;
-    }
-
-    .featured-image-1 {
-        background-image: url('../images/Chicken\ Noodle\ Stir\ Fry\ Recipe.jpg');
-        position: relative;
-        width: 246px;
-        height: 246px;
-    }
-
-    .featured-image-2 {
-        background-image: url('../images/Slow-cooker\ braised\ Chinese\ pork.jpg');
-        position: relative;
-        width: 246px;
-        height: 246px;
-    }
-
-    .featured-box-2, .featured-box-1 {
-        display: inline-block;
-        width: 30vw;
-        height: 30vw;
-    }
-
-    .flex-container-home-1 {
-        display: flex;
-        justify-content: space-around;
-        position: absolute;
-        width: 100%;
-        bottom: 15px;
-        margin-top: 5px;
-    }
-
-    .featured-box-3 {
-        display: none;
-    }
-
-    .feature-description {
-        width: 110px;
-        height: 120px;
-    }
-}
-
-/* --homepage-desktop-- */
-
-@media (min-width: 992px) {
-    #hero-image {
-        background-image: url('../images/hero-image-chinese-food.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        width: 100vw;
-        height: 800px;
-}
-
-.flex-container-home-2 {
-    display: inline-flex;
-    justify-content: space-around;
-    position: absolute;
-    width: 100%;
-    top: 940px;
-    margin-top: 5px;
-}
-
-.flex-item {
-    
-    width: 20vw;
-    height: 20vw;
-}
-}
-
-
-
 
 
 /*-- Colors --*/
-
 
 /*-- Formatting --*/
 
