--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ body {
 /*-- Front page --*/
 
 #hero-image {
-    background-image: url('../images/hero-image-chinese-food.jpg');
+    background-image: url(../images/Designer.png);
     background-size: cover;
     width: 100vw;
     height: 100vh;
@@ -213,8 +213,8 @@ body {
 
 @media (min-width: 576px){
     #hero-image {
-        background-image: url('../images/hero-image-chinese-food.jpg');
-        background-size: 210%;
+        background-image: url(../images/Designer.png);
+        background-size: 129%;
         background-repeat: no-repeat;
         background-position: center center;
         margin-top: -2vw; 
@@ -224,7 +224,7 @@ body {
     position: absolute;
     top: 40%;
     width: 66%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     color:white;
     margin-left: 10px;
 }
